twin registry integration - make some cleanup and repair test